updated Header footer files

--- a/public/angular/views/dashboard.html
+++ b/public/angular/views/dashboard.html
@@ -1,18 +1,3 @@
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<h1>Helloooo</h1>
+<div class="dashboard-cn">
+	<h2>Wel-come To Traffic Source Dashboard.</h2>
+</div>
