--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -44,8 +44,6 @@
         
 
         <link rel="stylesheet" type="text/css" href="/minified/final.min.css">
-
-
         <script type="text/javascript" src="/minified/script.min.js"></script>
 
 
@@ -63,39 +61,15 @@
 
     <body id="app" data-ng-controller="CommonController">
 
-        <!-- <nav class="navbar navbar-inverse navbar-fixed-top gb-header">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                <a class="navbar-brand" href="#">Project name</a>
-                </div>
-                <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Dashboard</a></li>
-                        <li><a href="#">Settings</a></li>
-                        <li><a href="#">Profile</a></li>
-                        <li><a href="#">Help</a></li>
-                    </ul>
-                    <form class="navbar-form navbar-right">
-                        <input type="text" class="form-control" placeholder="Search...">
-                    </form>
-                </div>
-            </div>
-        </nav> -->
-
         <div data-ng-include="'/angular/views/include/header.html'"></div>
 
-        <div id="content" class="view-content">
+        <div id="body-content" class="view-content">
             <section>
                 <div ui-view></div>
             </section>
         </div>
 
+        <div data-ng-include="'/angular/views/include/footer.html'"></div>
 
     </body>
 
