login model working in progress

--- a/public/angular/views/include/footer.html
+++ b/public/angular/views/include/footer.html
@@ -1,5 +1,5 @@
 <div class="gb-footer">
-	<div class="container">
-		copy right
+	<div class="container text-center">
+		Design By Traffic Source Team
 	</div>
 </div>
