--- a/public/angular/views/include/header.html
+++ b/public/angular/views/include/header.html
@@ -7,18 +7,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-        <a class="navbar-brand" href="#"> Traffic Source</a>
+        <a class="navbar-brand" href="#"> <img src="/images/Web-icon.png" class="gb-header-logo-img"> <span class="gb-header-logo-text">Traffic Source</span></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Dashboard</a></li>
-                <li><a href="#">Settings</a></li>
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">Help</a></li>
+                <li><a href="#"><i class="fa fa-sign-in" aria-hidden="true"></i> Register</a></li>
+                <li><a href="/#!/login"><i class="fa fa-lock" aria-hidden="true"></i> Login</a></li>
             </ul>
-            <form class="navbar-form navbar-right">
-                <input type="text" class="form-control" placeholder="Search...">
-            </form>
         </div>
     </div>
 </nav>
