design user crud

--- a/public/angular/views/include/header.html
+++ b/public/angular/views/include/header.html
@@ -11,8 +11,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><i class="fa fa-sign-in" aria-hidden="true"></i> Register</a></li>
-                <li><a href="/#!/login"><i class="fa fa-lock" aria-hidden="true"></i> Login</a></li>
+                <li><a href="#"><i class="fa fa-sign-in" aria-hidden="true"></i> Sign up</a></li>
+                <li><a href="/#!/login"><i class="fa fa-lock" aria-hidden="true"></i> Sign In</a></li>
             </ul>
         </div>
     </div>
