--- a/public/css/sass/user.css
+++ b/public/css/sass/user.css
@@ -1,20 +1,33 @@
 .login-section {
   display: table;
-  width: 100%; }
+  width: 100%;
+  padding: 150px 0px; }
   .login-section .centre-align {
     display: table-cell;
     text-align: center;
     vertical-align: middle; }
     .login-section .centre-align .login-cn {
-      max-width: 500px;
+      width: 400px;
       border: 1px solid rgba(61, 72, 55, 0.3);
       background-color: rgba(55, 57, 72, 0.3);
       display: inline-block;
       vertical-align: top;
       padding: 20px;
-      box-shadow: 0 0 99px 0 rgba(32, 35, 66, 0.6) inset; }
-  .login-section h2 {
+      border: 2px solid #3e3d3d;
+      box-shadow: 0 0 99px 0 #171616 inset; }
+  .login-section h3 {
     margin: 0px;
     border-bottom: 1px solid #46474e;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     padding-bottom: 10px; }
+  .login-section .forgot-password-link {
+    margin-top: 10px;
+    color: #b9bbb7; }
+  .login-section .sign-up-link {
+    margin-top: 15px;
+    color: #656161; }
+    .login-section .sign-up-link a {
+      color: #b9bbb7; }
+  @media (max-width: 440px) {
+    .login-section .centre-align .login-cn {
+      width: 100%; } }
