--- a/public/sass/variable.scss
+++ b/public/sass/variable.scss
@@ -1,4 +1,6 @@
 $light-gray: #61ea1b;
 $dark-blue: #202342;
 $white: white;
-$text-color: #676c9e;
+$text-color: #656161;
+$lable-color: #716f6f;
+$link-color:#b9bbb7;
