--- a/public/angular/views/users/login.html
+++ b/public/angular/views/users/login.html
@@ -4,31 +4,40 @@
 
         	<div class="row">
         		<div class="col-md-12">
-        			<h2>Login</h2> 
+        			<h3>Welcome</h3> 
+        			<h4>Let's get started.</h4>
+        			<p>This will be an amazing experience.</p>
         		</div>
+            </div>
+            <div class="row">
         		<div class="col-md-12">    			 
 				  	<div class="form-group">
 					    <label for="email">Email</label>
 					    <input type="email" class="form-control" id="email">
 				 	</div>
         		</div>
+            </div>
+            <div class="row">
         		<div class="col-md-12">
 					<div class="form-group">
 					    <label for="pwd">Password</label>
 					    <input type="password" class="form-control" id="pwd">
 					</div> 
         		</div>
-        		<div class="col-md-12">	 
-				  	<div class="checkbox">
-				   		<label><input type="checkbox"> Remember me</label>
-				  	</div>
+            </div>
+            <div class="row">
+        		<div class="col-md-12 mt-5">
+                    <a class="forgot-password-link pull-left" href="/#!/forgot-password">Forgot Password?</a>
+			  		<button type="submit" class="btn btn-default gb-button pull-right">Sign In</button>
         		</div>
-        		<div class="col-md-12">
-			  		<button type="submit" class="btn btn-default gb-button pull-right">Submit</button>
-        		</div>
-        	</div>
+            </div>
 
-        	
+            <div>
+                <div class="col-md-12">
+                    <div class="sign-up-link">Not a member?<a href="/#!/register"> Sign up now?</a></div>
+                </div>
+            </div>
+
         </div>
     </div>
 </DIV>
