--- a/public/css/sass/global.css
+++ b/public/css/sass/global.css
@@ -5,33 +5,42 @@ body {
   background-repeat: no-repeat;
   background-size: 100%;
   background-size: cover;
-  color: #676c9e; }
+  color: #656161; }
 
 .gb-header {
-  border-bottom: 5px solid #61ea1b;
-  background-color: #202342;
-  color: white; }
+  border-bottom: 5px solid #456d2c;
+  color: white;
+  background-color: rgba(16, 40, 243, 0.3);
+  box-shadow: 0 0 99px 0 #171616 inset; }
 
 .gb-header-logo-text {
   position: relative;
-  top: -80px;
-  left: 86px; }
+  top: -32px;
+  left: 60px; }
 
 .gb-header-logo-img {
-  width: 80px; }
+  width: 45px;
+  margin-top: -12px; }
 
 .text-center {
   text-align: center; }
 
+.pointer {
+  cursor: pointer; }
+
+.mt-5 {
+  margin-top: 5px; }
+
 .gb-footer {
   height: 30px;
   width: 100%;
-  background-color: #202342;
   position: fixed;
   bottom: 0px;
   padding: 5px;
-  border-top: 2px solid #61ea1b;
-  color: #676c9e; }
+  color: white;
+  border-top: 2px solid #59595a;
+  background-color: #c8c5ce;
+  box-shadow: 0 0 99px 0 #171616 inset; }
 
 .view-content {
   margin: 70px 16px 43px 16px; }
@@ -39,19 +48,23 @@ body {
 .dashboard-cn {
   padding-top: 350px;
   text-align: center;
-  color: #676c9e; }
+  color: #656161; }
 
 .gb-button,
 .gb-button:hover,
-.gb-button:focus {
-  background-color: #323232;
-  border: 1px solid #6e8264;
-  color: white; }
+.gb-button:focus,
+.gb-button:active {
+  background-color: #323232 !important;
+  border: 1px solid #4a4d6d !important;
+  color: #716f6f !important; }
 
 input {
   background-color: #303030 !important;
-  border: 1px solid #4e4c4c !important; }
+  border: 1px solid #4e4c4c !important;
+  height: 40px !important;
+  color: white !important; }
 
 label {
-  color: white;
-  float: left; }
+  color: #716f6f;
+  float: left;
+  font-weight: 400; }
