--- a/public/sass/user.scss
+++ b/public/sass/user.scss
@@ -1,25 +1,53 @@
+@import "variable";
+
 .login-section {
     display: table;
     width: 100%;
+    padding: 150px 0px;
 	.centre-align {
 	    display: table-cell;
 	    text-align: center;
 	    vertical-align: middle;
 		.login-cn {
-		    max-width: 500px;
+			width: 400px;
 		    border: 1px solid hsla(100, 13%, 25%, 0.3);
 		    background-color: hsla(235, 13%, 25%, 0.3);
 		    display: inline-block;
     		vertical-align: top;
     		padding: 20px;
-    		box-shadow: 0 0 99px 0 rgba(32, 35, 66, 0.6) inset;
+    		border: 2px solid #3e3d3d;
+    		box-shadow: 0 0 99px 0 #171616 inset;
 		}
 	}
 
-	h2 {
+	h3 {
 		margin: 0px;
 	    border-bottom: 1px solid #46474e;
-	    margin-bottom: 20px;
+	    margin-bottom: 10px;
 	    padding-bottom: 10px;
 	}
+
+	.forgot-password-link {
+	    margin-top: 10px;
+	    color: $link-color;
+	}
+
+	.sign-up-link {
+		margin-top: 15px;
+	    color: $text-color;
+	    a {
+	    	color: $link-color;
+	    }	
+	}
+
+
+	@media(max-width: 440px) {
+	    .centre-align {
+			.login-cn {
+				width: 100%;
+			}
+		}
+	}
 }
+
+
