--- a/public/angular/views/users/login.html
+++ b/public/angular/views/users/login.html
@@ -1,5 +1,5 @@
-<DIV class="login-section">
-    <div class="centre-align">
+<DIV class="login-section" data-ng-controller="UserController">
+    <div class="centre-align" data-ng-form="loginForm">
         <div class="login-cn">
 
         	<div class="row">
@@ -9,26 +9,31 @@
         			<p>This will be an amazing experience.</p>
         		</div>
             </div>
+
+
             <div class="row">
         		<div class="col-md-12">    			 
 				  	<div class="form-group">
-					    <label for="email">Email</label>
-					    <input type="email" class="form-control" id="email">
+					    <label for="email">Email 
+                            <span class="error-text" data-ng-show="loginObj.isLoginFormSubmitting && loginForm.email.$error.required"> Required</span>
+                            <span class="error-text" data-ng-show="loginObj.isLoginFormSubmitting && loginForm.email.$error.email"> Invalid</span>
+                        </label>
+					    <input type="email" class="form-control" id="email" name="email" data-ng-model="loginObj.formInput.email" data-ng-required="true" placeholder="Email">
 				 	</div>
         		</div>
             </div>
             <div class="row">
         		<div class="col-md-12">
 					<div class="form-group">
-					    <label for="pwd">Password</label>
-					    <input type="password" class="form-control" id="pwd">
+					   <label for="password">Password <span class="error-text" data-ng-show="loginObj.isLoginFormSubmitting && loginForm.password.$error.required"> Required</span></label>
+                        <input type="password" class="form-control" id="password" name="password" data-ng-model="loginObj.formInput.password" data-ng-required="true" placeholder="Password">
 					</div> 
         		</div>
             </div>
             <div class="row">
         		<div class="col-md-12 mt-5">
                     <a class="forgot-password-link pull-left" href="/#!/forgot-password">Forgot Password?</a>
-			  		<button type="submit" class="btn btn-default gb-button pull-right">Sign In</button>
+			  		<button type="submit" class="btn btn-default gb-button pull-right" data-ng-disabled="loginObj.loginBtnDisable" data-ng-click="loginObj.postLogin(loginForm)">Sign In</button>
         		</div>
             </div>
 
