--- a/public/angular/views/users/register.html
+++ b/public/angular/views/users/register.html
@@ -1,5 +1,5 @@
-<DIV class="login-section">
-    <div class="centre-align">
+<DIV class="login-section" data-ng-controller="UserController">
+    <div class="centre-align" data-ng-form="registerForm">
         <div class="login-cn">
 
         	<div class="row"> 
@@ -13,8 +13,8 @@
             <div class="row">
         		<div class="col-md-12">                
                     <div class="form-group">
-                        <label for="firstName">First Name</label>
-                        <input type="text" class="form-control" id="firstName">
+                        <label for="firstName">First Name <span class="error-text" data-ng-show="registerObj.isSignUpFormSubmitting && registerForm.firstName.$error.required"> Required</span></label>
+                        <input type="text" class="form-control" id="firstName" name="firstName" data-ng-model="registerObj.formInput.firstName" data-ng-required="true" placeholder="First Name">
                     </div>
                 </div>
             </div>
@@ -22,8 +22,8 @@
             <div class="row">
                 <div class="col-md-12">              
                     <div class="form-group">
-                        <label for="lastName">Last Name</label>
-                        <input type="text" class="form-control" id="lastName">
+                        <label for="lastName">Last Name <span class="error-text" data-ng-show="registerObj.isSignUpFormSubmitting && registerForm.lastName.$error.required"> Required</span></label>
+                        <input type="text" class="form-control" id="lastName" name="lastName" data-ng-model="registerObj.formInput.lastName" data-ng-required="true" placeholder="Last Name">
                     </div>
                 </div>
             </div>
@@ -32,8 +32,12 @@
             <div class="row">
                 <div class="col-md-12">    			 
 				  	<div class="form-group">
-					    <label for="email">Email</label>
-					    <input type="email" class="form-control" id="email">
+                        <label for="email">Email 
+                            <span class="error-text" data-ng-show="registerObj.isSignUpFormSubmitting && registerForm.email.$error.required"> Required</span>
+                            <span class="error-text" data-ng-show="registerObj.isSignUpFormSubmitting && registerForm.email.$error.email"> Invalid</span>
+                        </label>
+
+					    <input type="email" class="form-control" id="email" name="email" data-ng-model="registerObj.formInput.email" data-ng-required="true" placeholder="Email">
 				 	</div>
         		</div>
             </div>
@@ -41,8 +45,8 @@
             <div class="row">
         		<div class="col-md-12">
 					<div class="form-group">
-					    <label for="pwd">Password</label>
-					    <input type="password" class="form-control" id="pwd">
+					    <label for="password">Password <span class="error-text" data-ng-show="registerObj.isSignUpFormSubmitting && registerForm.password.$error.required"> Required</span></label>
+					    <input type="password" class="form-control" id="password" name="password" data-ng-model="registerObj.formInput.password" data-ng-required="true" placeholder="Password">
 					</div> 
         		</div>
             </div>
@@ -50,7 +54,7 @@
             <div class="row">
         		<div class="col-md-12 mt-5">
                     <a class="forgot-password-link pull-left" href="/#!/login">Login?</a>
-			  		<button type="submit" class="btn btn-default gb-button pull-right">Sign up</button>
+			  		<button type="submit" class="btn btn-default gb-button pull-right" data-ng-disabled="registerObj.signUpBtnDisable" data-ng-click="registerObj.postRegister(registerForm)">Sign up</button>
         		</div>
             </div>
 
